Fixed dark mode - return to good practices

--- a/static/style.css
+++ b/static/style.css
@@ -113,43 +113,3 @@ article blockquote {
     column-gap: 1.25rem; /* 12px */
   }
 }
-
-/*
-  Dodaje przezroczysty obrys do tekstu, co może powstrzymać
-  niektóre przeglądarki przed zmianą jego koloru.
-*/
-/* p, */
-/* h1, */
-/* h2, */
-/* h3, */
-/* h4, */
-/* span, */
-/* li, */
-/* a { */
-/* -webkit-text-stroke: 0.1px transparent; */
-/* text-stroke: 0.1px transparent; */
-/* } */
-
-/* 
-  Resetuje on style, które przeglądarka Samsung Internet
-  próbuje na siłę narzucić w trybie ciemnym.
-*/
-html {
-  background: initial !important;
-  filter: initial !important;
-}
-
-html,
-body,
-main,
-section,
-div,
-header,
-footer,
-nav,
-article {
-  background-color: transparent !important;
-  background-image: none !important;
-  filter: none !important;
-  -webkit-filter: none !important;
-}
